--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?cache_id={{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?cache_id={{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png?cache_id={{ cache_id }}" />
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="../static/scripts/1-hbnb.js"></script>
     <title>HBnB</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="static/scripts/2-hbnb.js"></script>
   </head>
   <body>
     <header>
       <div class="logo"></div>
+      <div id='api_status'>api_st</div>
     </header>
     <div class="container">
       <section class="filters">
